try-catch added + openapi update
